[package]
name = "civet"
version = "0.1.0"
authors = ["phynalle <phynalism@gmail.com>"]
build = "build.rs"

[[bin]]
name = "cv"
path = "src/main.rs"

[dependencies]
clippy = {version = "0.0.131", optional = true}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pcre = "*"
lazy_static = "0.2"
onig = "1.0"

[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"