[package]
name = "civetcat"
version = "0.1.0"
authors = ["phynalle <phynalism@gmail.com>"]
build = "build.rs"

[[bin]]
name = "cv"
path = "src/main.rs"

[dependencies]
clippy = {version = "*", optional = true}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "0.2"
onig = "2.0"
atty = "0.2.3"
clap = "2.26.2"

[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
